--- a/src/locale/ja/LC_MESSAGES/products_guide.po
+++ b/src/locale/ja/LC_MESSAGES/products_guide.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Monaca 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>, 2016\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>, 2016\n"
 "Language-Team: Japanese (https://www.transifex.com/monaca/teams/61343/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: ../doc/products_guide/index.rst:2
 msgid "Products Guide"
-msgstr ""
+msgstr "Monaca ガイド"
 
 #: ../doc/products_guide/monaca_intro.rst:5
 msgid "Monaca Development Overview"
