--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -5,12 +5,13 @@
 # Translators:
 # Automatically generated, 2013
 # fabbygoh <fabbygoh@gmail.com>, 2016
+# fabbygoh <fabbygoh@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-10-25 09:04+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-11-04 02:56+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr "Onsen UI"
 
 #: ../doc/onsenui/manual/index.rst:2
 msgid "Manual"
-msgstr ""
+msgstr "マニュアル ( テンプレート選択までの簡単な手順 )"
 
 #: ../doc/onsenui/manual/index.rst:12
 msgid "HTML5 Framework for Building Mobile App Front End"
@@ -82,20 +83,20 @@ msgstr "ここまでの手順で、Onsen UI のインストールが完了しま
 
 #: ../doc/onsenui/samples/index.rst:3
 msgid "Samples"
-msgstr ""
+msgstr "サンプル"
 
 #: ../doc/onsenui/samples/index.rst:5
 msgid ""
 "Please refer to `the samples on Onsen UI website "
 "<https://onsen.io/samples/>`_."
-msgstr ""
+msgstr "`こちらのページ ( Onsen UI のページ ) <https://onsen.io/samples/>`_ でサンプルをご確認ください。"
 
 #: ../doc/onsenui/tutorial/index.rst:3
 msgid "Onsen UI Tutorial"
-msgstr ""
+msgstr "Onsen UI チュートリアル ( ハンズオン形式 )"
 
 #: ../doc/onsenui/tutorial/index.rst:5
 msgid ""
 "Please refer to `the tutorial on Onsen UI website "
 "<https://onsen.io/tutorial/>`_."
-msgstr ""
+msgstr "`こちらのページ ( Onsen UI のページ ) <https://onsen.io/tutorial/>`_ で Onsen UI を試してみましょう ( 実際のコードに触れてみるハンドオン形式です )。"
