--- a/src/locale/ja/LC_MESSAGES/onsenui.po
+++ b/src/locale/ja/LC_MESSAGES/onsenui.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-11-04 02:56+0000\n"
-"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
+"PO-Revision-Date: 2016-11-07 07:18+0000\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +25,7 @@ msgstr "Onsen UI"
 
 #: ../doc/onsenui/manual/index.rst:2
 msgid "Manual"
-msgstr "マニュアル ( テンプレート選択までの簡単な手順 )"
+msgstr "マニュアル"
 
 #: ../doc/onsenui/manual/index.rst:12
 msgid "HTML5 Framework for Building Mobile App Front End"
@@ -83,7 +83,7 @@ msgstr "ここまでの手順で、Onsen UI のインストールが完了しま
 
 #: ../doc/onsenui/samples/index.rst:3
 msgid "Samples"
-msgstr "サンプル"
+msgstr "サンプルアプリ"
 
 #: ../doc/onsenui/samples/index.rst:5
 msgid ""
@@ -93,7 +93,7 @@ msgstr "`こちらのページ ( Onsen UI のページ ) <https://onsen.io/sampl
 
 #: ../doc/onsenui/tutorial/index.rst:3
 msgid "Onsen UI Tutorial"
-msgstr "Onsen UI チュートリアル ( ハンズオン形式 )"
+msgstr "Onsen UI チュートリアル"
 
 #: ../doc/onsenui/tutorial/index.rst:5
 msgid ""
